WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282421
Have Timer protect the object it is calling the timeout function on when possible
https://bugs.webkit.org/show_bug.cgi?id=282421
Summary
Have Timer protect the object it is calling the timeout function on when poss...
Chris Dumez
Reported
2024-10-31 19:40:05 PDT
Have Timer protect the object it is calling the timeout function on when possible. Otherwise, people have to remember to add a `protectedThis` protector at the beginning out of `timerFired()` functions, which is error prone.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-10-31 19:51:19 PDT
I have it working. Will upload shortly.
Chris Dumez
Comment 2
2024-10-31 20:36:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36033
EWS
Comment 3
2024-11-01 11:16:31 PDT
Committed
286015@main
(e6d75cd60444): <
https://commits.webkit.org/286015@main
> Reviewed commits have been landed. Closing PR #36033 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-11-01 11:17:16 PDT
<
rdar://problem/139084103
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug