Have Timer protect the object it is calling the timeout function on when possible https://bugs.webkit.org/show_bug.cgi?id=282421

Reviewed by Ryosuke Niwa and Darin Adler.

Have Timer protect the object it is calling the timeout function on when possible.
Otherwise, people have to remember to add a `protectedThis` protector at the
beginning out of `timerFired()` functions, which is error prone.

* Source/WTF/wtf/RunLoop.h:
* Source/WebCore/Modules/geolocation/GeoNotifier.cpp:
(WebCore::GeoNotifier::timerFired):
* Source/WebCore/css/CSSFontFace.cpp:
(WebCore::CSSFontFace::timeoutFired):
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::pendingTasksTimerFired):
(WebCore::Document::loadEventDelayTimerFired):
* Source/WebCore/dom/ScriptableDocumentParser.cpp:
(WebCore::ScriptableDocumentParser::scriptsWaitingForStylesheetsExecutionTimerFired):
* Source/WebCore/html/HTMLPlugInElement.cpp:
(WebCore::HTMLPlugInElement::swapRendererTimerFired):
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::scrollToFocusedElementTimerFired):
(WebCore::LocalFrameView::textFragmentIndicatorTimerFired):
(WebCore::LocalFrameView::updateEmbeddedObjectsTimerFired):
* Source/WebCore/platform/Timer.h:
(WebCore::Timer::Timer):

Canonical link: https://commits.webkit.org/286015@main