Source/WebCore/dom/ScriptableDocumentParser.cpp
@@ -59,8 +59,6 @@ void ScriptableDocumentParser::scriptsWaitingForStylesheetsExecutionTimerFired()
 {
     ASSERT(!isDetached());
 
-    Ref protectedThis { *this };
-
     RefPtr document = this->document();
     if (!document->styleScope().hasPendingSheets())
         executeScriptsWaitingForStylesheets();
